# cloudgamesaver

./: .gitignore  LICENSE  README.md  SDD.md  SPECIFICATION.md  build_unix.sh  build_windows.bat  package-lock.json  package.json  run_cloudsaver.bat
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
